fixed images to align into the cards

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -91,3 +91,10 @@ h1{
   margin: 1rem 2rem;
   margin-left: 7rem;
 }
+
+img{
+  width: 100%;
+  border-radius: 12px;
+  height: 214px;
+  align-items: center;
+}
